# maas-engine

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: celery_config.py  mock_config.yaml  sample_analysis.yaml
docs/: TASKS.md
infrastructure/docker/: docker-compose.yml
infrastructure/dockerfiles/: Dockerfile.app  Dockerfile.beat  Dockerfile.worker  entrypoint.sh
infrastructure/postgres/: initialize_db.py
infrastructure/postgres/init/: 01_create_database.sql  02_create_tables.sql  03_create_indexes.sql
scripts/: docker_entrypoint.sh  test_api.py  test_celery.py
src/: initiator.py  recovery.py  startup.py
src/api/: main.py
src/api/dependencies/: auth.py  database.py
src/api/endpoints/: analysis.py  batch.py  jobs.py  mock_moody.py  mock_moodys.py  system.py
src/api/models/: schemas.py
src/core/: config.py  constants.py  exceptions.py
src/db/: migrate_phase1.py  models.py  session.py
src/db/repositories/: __init__.py  analysis_repository.py  base_repository.py  batch_repository.py  configuration_repository.py  job_repository.py
src/services/: orchestrator.py  recovery_service.py
src/tasks/: analysis_tasks.py  batch_tasks.py  celery_app.py  celery_test_app.py  job_tasks.py  recovery_tasks.py
src/utils/: logger.py
tests/: test_api.py  test_celery.py  test_full_flow.py  test_mock_api.py  test_recovery.py
